<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/tvHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvHello"
        android:textSize="25sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/btnToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnToast"
        android:textSize="25sp"
        android:layout_marginTop="30dp"/>
    <Button
        android:id="@+id/btnSnack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="25sp"
        android:layout_marginTop="30dp"/>
    <Button
        android:id="@+id/btnAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAlert"
        android:textSize="25sp"
        android:layout_marginTop="30dp"/>
    <Button
        android:id="@+id/btnCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCustom"
        android:textSize="25sp"
        android:layout_marginTop="30dp"/>




</LinearLayout>