<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tittle"
        android:textSize="30sp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvName"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="30dp"/>
    <EditText
        android:id="@+id/etType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Type"
        android:textSize="25sp"
        android:textColorHint="@color/black"
        android:gravity="center"
        android:layout_marginTop="30sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center"
        >
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCancel"
        android:textSize="20sp"
        android:layout_margin="10dp"
        />
    <Button
        android:id="@+id/btnset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSet"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:gravity="end"/>

    </LinearLayout>


</LinearLayout>